# bitscalc

./: .gitignore  Makefile  README.md  buid.sh  cli.sh  dev.sh  makewasm.sh
.github/workflows/: main.yml
bitscalclib/: Cargo.toml
bitscalclib/examples/: cli.rs
bitscalclib/src/: error.rs  eval.rs  expr.rs  lib.rs  scan.rs  step.rs  tests.rs  token.rs  value.rs  wasm.rs
bitscalcsite/: package-lock.json  package.json  vite.config.js
bitscalcsite/src/: App.svelte  app.css
bitscalcsite/src/lib/: ResultDisplay.svelte  StepDisplay.svelte  TokenDisplay.svelte  ValueDisplay.svelte
lib/: Cargo.toml
lib/examples/: cli.rs
lib/src/: error.rs  eval.rs  expr.rs  lib.rs  scan.rs  step.rs  tests.rs  token.rs  value.rs
site/: index.html  package-lock.json  package.json
site/src/: App.svelte  app.css
site/src/lib/: Example.svelte  FormatButton.svelte  H1.svelte  H2.svelte  H3.svelte  HelpDisplay.svelte  LandingDisplay.svelte  Panel.svelte  ResultDisplay.svelte  SettingButton.svelte  StepDisplay.svelte  TokenDisplay.svelte
