[package]
name = "bitscalclib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console = "0.15.8"
num-traits = "0.2.19"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"

[dev-dependencies]
wasm-bindgen-test = "0.3"
